--- a/app/views/taxis/index.html.erb
+++ b/app/views/taxis/index.html.erb
@@ -1,3 +1,10 @@
+<% if current_user %>
+  Welcome <%= current_user.name %>, <img src="<%= current_user.image %>">!
+  <%= link_to "Sign Out", signout_path %>
+<% else %>
+  <%= link_to "Sign in with Twitter", "/auth/twitter" %>
+<% end %>
+
 <h1>Listing taxis</h1>
 
 <table>
